[package]
name = "grammers-plugins"
version = "0.1.0"
authors = ["AndrielFR <andrielkogama2@gmail.com>"]
license = "BSD 3-Clause"
homepage = "https://github.com/AndrielFR/grammers-plugins"
repository = "https://github.com/AndrielFR/grammers-plugins"
keywords = ["telegram", "grammers", "plugins"]
categories = [""]
edition = "2021"

[dependencies]
grammers-client = { git = "https://github.com/Lonami/grammers", rev = "a21d385" }
grammers-tl-types = { git = "https://github.com/Lonami/grammers", rev = "a21d385" }
grammers-macros = { path = "../grammers-macros" }
# grammers-macros = { git = "https://github.com/AndrielFR/grammers-macros" }
tokio = { version = "1.5.0", features = ["macros", "rt", "rt-multi-thread", "signal", "sync"] }
regex = "1.5.6"
once_cell = "1.12.0"
async-recursion = "1.0.0"
